tests/baselines/reference/parserES5SymbolProperty5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5SymbolProperty5.ts(2,13): error TS2339: Property 'isRegExp' does not exist on type 'SymbolConstructor'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5SymbolProperty5.ts (1 errors) ====
    class C {
        [Symbol.isRegExp]: string;
                ~~~~~~~~
!!! error TS2339: Property 'isRegExp' does not exist on type 'SymbolConstructor'.
    }